test_datas/compile_fail/wrong_arg_count.pgl
package main;

func add(a int, b int) int {
    c := a + b;
    return c;
}

func main() {
    println(add(1));
}
