test_datas/compile_fail/wrong_arg_count.pgl.error
/home/sream/workspace/pangu/test_datas/compile_fail/wrong_arg_count.pgl:9:13: error: function 'add' expects 2 argument(s), got 1
    println(add(1));
            ^~~
